<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!-- Copyright (C) 2025 Nobleo Autonomous Solutions B.V. -->

<package format="3">
  <name>ros2_fmt_logger</name>
  <version>1.0.1</version>
  <description>
    A modern, ROS 2 logging library that provides fmt-style formatting as a replacement for RCLCPP logging macros
  </description>

  <maintainer email="tim.clephas@nobleo.nl">Tim Clephas</maintainer>

  <license>Apache-2.0</license>
  <url type="website">https://github.com/nobleo/ros2_fmt_logger</url>
  <url type="repository">https://github.com/nobleo/ros2_fmt_logger</url>
  <url type="bugtracker">https://github.com/nobleo/ros2_fmt_logger/issues</url>

  <author email="tim.clephas@nobleo.nl">Tim Clephas</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>backward_ros</depend>
  <depend>fmt</depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
